--- a/src/app/sistema/usuarios-sistema/criar-usuario-sistema/criar-usuario-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/criar-usuario-sistema/criar-usuario-sistema.component.html
@@ -7,11 +7,9 @@
     <div class="col m-0 bg-custom-white">
         <!-- Lista de Usuários do Sistema -->
         <div class="container">
-
             <!-- Botão de voltar -->
             <div class="row m-0 justify-content-start mt-4">
-                <a class="col-1 p-1 bg-white rounded-15 text-center my-auto"
-                    routerLink="/sistema/usuarios-sistema/listar">
+                <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/usuarios-sistema/listar">
                     <i class="bi-arrow-left fs-3 text-secondary"></i>
                 </a>
             </div>
@@ -19,90 +17,154 @@
             <!-- Formulário -->
             <form [formGroup]="userForm" (ngSubmit)="sendForm(userForm.value)">
                 <div class="row m-0 mt-4 justify-content-center">
-
                     <div class="col-12 pb-4 d-flex align-items-center">
                         <h2>Adicionar novo usuário</h2>
                     </div>
 
                     <div class="col-12 pb-4 d-flex align-items-center border-bottom">
-                        <div class="avatar shadow-sm rounded-circle img-fluid"
-                            [ngStyle]="{ background : 'url(' + avatarImg + ')' }" alt="Ricardo Botega"></div>
-                        <input type="file" accept="image/*" (change)="uploadImage($event)" style="display: none;"
-                            #fileInput>
-                        <a class="fw-bold text-custom-dark fs-5 px-5" (click)="fileInput.click()">Trocar foto de
-                            perfil</a>
-                    </div>
+                        <div class="avatar shadow-sm rounded-circle img-fluid" [ngStyle]="{ background: 'url(' + avatarImg + ')' }" alt="Ricardo Botega"></div>
+                        <input type="file" accept="image/*" (change)="uploadImage($event)" style="display: none" #fileInput />
+                        <a class="fw-bold text-custom-dark fs-5 px-5" (click)="fileInput.click()">Trocar foto de perfil</a
+            >
+          </div>
 
-                    <!-- Nome -->
-                    <div class="col-4 px-2 pt-4 p-0 m-0">
-                        <input formControlName="name" [class.invalid]="name?.invalid && (name?.dirty || name?.touched)"
-                            class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
-                            type="text" placeholder="Nome">
-                    </div>
+          <!-- Nome -->
+          <div class="col-4 px-2 pt-4 p-0 m-0">
+            <input
+              formControlName="name"
+              [class.invalid]="name?.invalid && (name?.dirty || name?.touched)"
+              class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
+              type="text"
+              placeholder="Nome"
+            />
+          </div>
 
-                    <!-- Sobrenome -->
-                    <div class="col-4 px-2 pt-4 p-0 m-0">
-                        <input formControlName="surname"
-                            [class.invalid]="surname?.invalid && (surname?.dirty || surname?.touched)"
-                            class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
-                            type="text" placeholder="Sobrenome">
-                    </div>
+          <!-- Sobrenome -->
+          <div class="col-4 px-2 pt-4 p-0 m-0">
+            <input
+              formControlName="surname"
+              [class.invalid]="
+                surname?.invalid && (surname?.dirty || surname?.touched)
+              "
+              class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
+              type="text"
+              placeholder="Sobrenome"
+            />
+          </div>
 
-                    <!-- Email -->
-                    <div class="col-4 px-2 pt-4 p-0 m-0">
-                        <input formControlName="email"
-                            [class.invalid]="email?.invalid && (email?.dirty || email?.touched)"
-                            class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
-                            type="text" placeholder="Email">
-                    </div>
+          <!-- Email -->
+          <div class="col-4 px-2 pt-4 p-0 m-0">
+            <input
+              formControlName="email"
+              [class.invalid]="
+                email?.invalid && (email?.dirty || email?.touched)
+              "
+              class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
+              type="text"
+              placeholder="Email"
+            />
+          </div>
 
-                    <!-- Senha -->
-                    <div class="col-4 px-2 pt-4 p-0 m-0">
-                        <input formControlName="password" (blur)="checkPasswords()"
-                            [class.invalid]="password?.invalid && (password?.dirty || password?.touched)"
-                            class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
-                            type="password" placeholder="Senha">
-                    </div>
+          <!-- Senha -->
+          <div class="col-4 px-2 pt-4 p-0 m-0">
+            <input
+              formControlName="password"
+              (blur)="checkPasswords()"
+              [class.invalid]="
+                password?.invalid && (password?.dirty || password?.touched)
+              "
+              class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
+              type="password"
+              placeholder="Senha"
+            />
+          </div>
 
-                    <!-- Repetir senha -->
-                    <div class="col-4 px-2 pt-4 p-0 m-0">
-                        <span
-                            *ngIf="passwordRetype?.invalid && (passwordRetype?.dirty || passwordRetype?.touched) && passwordRetype?.errors?.incorrect"
-                            class="invalid">Sua senha deve ser igual a última senha inserida.</span>
-                        <input formControlName="passwordRetype" (blur)="checkPasswords()"
-                            [class.invalid]="passwordRetype?.invalid && (passwordRetype?.dirty || passwordRetype?.touched)"
-                            class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
-                            type="password" placeholder="Repetir senha">
-                    </div>
+          <!-- Repetir senha -->
+          <div class="col-4 px-2 pt-4 p-0 m-0">
+            <span
+              *ngIf="
+                passwordRetype?.invalid &&
+                (passwordRetype?.dirty || passwordRetype?.touched) &&
+                passwordRetype?.errors?.incorrect
+              "
+              class="invalid"
+              >Sua senha deve ser igual a última senha inserida.</span
+            >
+            <input
+              formControlName="passwordRetype"
+              (blur)="checkPasswords()"
+              [class.invalid]="
+                passwordRetype?.invalid &&
+                (passwordRetype?.dirty || passwordRetype?.touched)
+              "
+              class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm"
+              type="password"
+              placeholder="Repetir senha"
+            />
+          </div>
 
-                    <!-- Permissão -->
-                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                        <select formControlName="permission"
-                            [class.invalid]="permission?.invalid && (permission?.dirty || permission?.touched)"
-                            class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-                            placeholder="Permissão">
-                            <option value="-1" disabled selected>Permissão</option>
-                            <option value="0">Funcionário</option>
-                            <option value="1">Administrador</option>
-                        </select>
-                        <label class="ms-2 mt-3 small text-truncate text-custom-dark">Permissão</label>
-                    </div>
-                </div>
-
-                <div class="row m-0 mt-4 justify-content-end">
-
-                    <!-- Botão Salvar -->
-                    <div class="col-4 d-grid px-2 p-0 m-0">
-                        <button type="submit"
-                            class="btn rounded-15 py-3 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm">
-                            <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
-                        </button>
-                    </div>
-
-                </div>
-            </form>
-
+          <!-- Permissão -->
+          <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <select
+              formControlName="permission"
+              [class.invalid]="
+                permission?.invalid &&
+                (permission?.dirty || permission?.touched)
+              "
+              class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark"
+              type="text"
+              placeholder="Permissão"
+            >
+              <option value="-1" disabled selected>Permissão</option>
+              <option value="Funcionario">Funcionário</option>
+              <option value="Administrador">Administrador</option>
+            </select>
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+              >Permissão</label
+            >
+          </div>
         </div>
-        <!-- /Lista de Usuários do Sistema -->
+        <!-- Filial -->
+        <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+          <select
+            formControlName="filial"
+            [class.invalid]="
+              permission?.invalid && (permission?.dirty || permission?.touched)
+            "
+            class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark"
+            type="text"
+            placeholder="Permissão"
+          >
+            <option value="-1" disabled selected>Filial</option>
+            <option
+              *ngFor="let umaFilial of filiais"
+              value="{{ umaFilial.nome }}"
+            >
+              {{ umaFilial.nome }}
+            </option>
+          </select>
+          <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+            >Filial</label
+          >
+        </div>
+
+        <div class="row m-0 mt-4 justify-content-end">
+          <!-- Botão Salvar -->
+          <div class="col-4 d-grid px-2 p-0 m-0">
+            <button
+              type="submit"
+              class="btn rounded-15 py-3 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm"
+            >
+              <h5
+                class="fw-normal my-auto text-truncate text-custom-dark text-center"
+              >
+                Salvar
+              </h5>
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
+    <!-- /Lista de Usuários do Sistema -->
+  </div>
 </div>
