--- a/src/app/sistema/config/cadastro-de-categoria/cadastro-de-produto-lista/cadastro-de-produto-lista.component.html
+++ b/src/app/sistema/config/cadastro-de-categoria/cadastro-de-produto-lista/cadastro-de-produto-lista.component.html
@@ -31,17 +31,17 @@
 
                 <!-- Pesquisar -->
                 <div class="col-4 px-2 p-0 m-0 position-relative">
-                    <input class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
+                    <input [(ngModel)]="search" (input)="pesquisaCategoria()" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
                     <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
                 </div>
 
                 <!-- Botão Filtro -->
                 <div class="col-4 px-2 p-0 m-0">
-                    <a class="rounded-15 py-2 px-4 bg-white h-100 d-flex justify-content-between shadow-sm">
-                        <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                    <a data-bs-toggle="modal" data-bs-target="#filtrarCategorias" class="rounded-15 py-2 px-4 bg-white h-100 d-flex justify-content-between shadow-sm">
+                        <h5 data-bs-toggle="modal" data-bs-target="#filtrarCategorias" class="fw-normal my-auto text-truncate text-custom-dark">
                             Filtro
                         </h5>
-                        <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
+                        <i data-bs-toggle="modal" data-bs-target="#filtrarCategorias" class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
                     </a>
                 </div>
             </div>
@@ -57,19 +57,20 @@
             </div>
 
             <!-- Tabela -->
-            <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let categoria of categorias">
+            <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let categoria of categoriasFiltradas">
                 <div class="col-10">
                     <p>{{ categoria?.nome }}</p>
                 </div>
 
                 <div class="col-2 text-end d-flex align-items-center justify-content-end">
                     <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" />
+                        <input class="form-check-input" type="checkbox" [checked]="categoria?.status" [(ngModel)]="categoria.status" (click)="mudarStatus(categoria)" />
                     </div>
-                    <i class="fs-5 bi-trash-fill icon-delete px-3" cursor="pointer"></i>
+                    <i class="fs-5 bi-trash-fill icon-delete px-3" cursor="pointer" (click)="deleteCategoria(categoria)"></i>
                 </div>
             </div>
         </div>
         <!-- /Lista de categorias cadastrardas -->
     </div>
 </div>
+<app-filtro-categorias></app-filtro-categorias>
