--- a/src/app/sistema/config/cadastro-de-categoria/cadastro-de-produto/cadastro-de-produto.component.html
+++ b/src/app/sistema/config/cadastro-de-categoria/cadastro-de-produto/cadastro-de-produto.component.html
@@ -20,7 +20,7 @@
             </div>
 
             <form [formGroup]="categoriaForm">
-                <!-- Criar pedido -->
+                <!-- Criar Categoria -->
                 <div class="row">
                     <!-- Nome -->
                     <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
@@ -28,28 +28,34 @@
                         <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome</label
             >
           </div>
+          <div class="col-2 px-2 mt-4 d-flex align-items-center p-0 m-0">
+            <div class="form-check form-switch align-items-center d-flex">
+              <input
+                class="form-check-input pt-4 ps-5 border bg-custom-light shadow-sm"
+                type="checkbox"
+                id="status"
+                formControlName="status"
+                (click)="status()"
+                [checked]="desativadoCheckbox === true"
+              />
+              <label class="form-check-label px-4" for="status">Status</label>
+                    </div>
+                </div>
         </div>
 
         <!-- Footer -->
         <div class="row mt-5 py-3 pb-5 justify-content-end">
-          <!-- Botão Cancelar -->
-          <div class="col-3 px-2 p-0 m-0 d-grid">
-            <button
-              type="button"
-              class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm"
-            >
+            <!-- Botão Cancelar -->
+            <div class="col-3 px-2 p-0 m-0 d-grid">
+                <button type="button" class="h-limited btn rounded-15 py-1 px-4 btn-outline-secondary d-flex justify-content-between shadow-sm">
               <h5 class="fw-normal my-auto text-truncate">Cancelar</h5>
               <i class="bi-x my-auto fs-2 p-0 m-0 fw-bold"></i>
             </button>
-          </div>
+            </div>
 
-          <!-- Botão Salvar -->
-          <div class="col-3 px-2 p-0 m-0 d-grid">
-            <button
-              type="submit"
-              class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm"
-              (click)="submit()"
-            >
+            <!-- Botão Salvar -->
+            <div class="col-3 px-2 p-0 m-0 d-grid">
+                <button type="submit" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm" (click)="submit()">
               <h5 class="fw-normal my-auto text-truncate text-custom-dark">
                 Salvar
               </h5>
@@ -57,9 +63,9 @@
                 class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"
               ></i>
             </button>
-          </div>
+            </div>
         </div>
-      </form>
+        </form>
     </div>
-  </div>
+</div>
 </div>
