--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -53,20 +53,14 @@
                         </li>
                     </ul>
                 </div>
-                <span class="fw-bold">{{ user.name }} {{ user.surname }}</span
-        >, seja bem-vindo!
-        <!-- <div
+                <span class="fw-bold">{{ user.name }} {{ user.surname }}</span>
+                <!-- <div
           class="rounded-circle ms-3 border border-primary"
           style="height: 40px; width: 40px;
           background-image: url('{{avatarImg}}');background-position: center; background-size: cover;"
         ></div> -->
-        <img
-          class="rounded-circle ms-3 border border-primary"
-          height="40"
-          src="../../../assets/sem-foto.jpg"
-          alt="Perfil"
-        />
-      </div>
+                <img class="rounded-circle ms-3 border border-primary" height="40" src="../../../assets/sem-foto.jpg" alt="Perfil" />
+            </div>
+        </div>
     </div>
-  </div>
 </nav>
