alteraçoes filtro destinacao e categoria

--- a/src/app/sistema/compras/pedidos-compras/criar-pedido-compras/criar-pedido-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/criar-pedido-compras/criar-pedido-compras.component.html
@@ -308,6 +308,7 @@
                 {{ pedidoCompraForm.value.valorTotal | currency: "BRL" }}
               </p>
             </div>
+            <!-- <google-chart [data]="comprasChart"></google-chart> -->
           </div>
         </div>
         <!-- /Resumo do pedido -->
