--- a/src/app/sistema/config/cadastro-de-categoria/cadastro-de-produto-lista/cadastro-de-produto-lista.component.html
+++ b/src/app/sistema/config/cadastro-de-categoria/cadastro-de-produto-lista/cadastro-de-produto-lista.component.html
@@ -34,15 +34,26 @@
                     <input [(ngModel)]="search" (input)="pesquisaCategoria()" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
                     <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
                 </div>
+                <div class="row m-0 mt-4 justify-content-center">
+                    <!-- Ativos -->
+                    <div class="col-4 px-2 p-0 m-0">
+                        <div class="rounded-15 py-2 px-4 bg-white h-100 d-flex shadow-sm">
+                            <i class="bi-circle-fill my-auto p-0 m-0 me-2 fw-bold text-success" (click)="getCategorias(true)"></i>
+                            <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                                {{ data.status }}ativos
+                            </h5>
+                        </div>
+                    </div>
 
-                <!-- Botão Filtro -->
-                <div class="col-4 px-2 p-0 m-0">
-                    <a data-bs-toggle="modal" data-bs-target="#filtrarCategorias" class="rounded-15 py-2 px-4 bg-white h-100 d-flex justify-content-between shadow-sm">
-                        <h5 data-bs-toggle="modal" data-bs-target="#filtrarCategorias" class="fw-normal my-auto text-truncate text-custom-dark">
-                            Filtro
-                        </h5>
-                        <i data-bs-toggle="modal" data-bs-target="#filtrarCategorias" class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-                    </a>
+                    <!-- Inativos -->
+                    <div class="col-4 px-2 p-0 m-0">
+                        <div class="rounded-15 py-2 px-4 bg-white h-100 d-flex shadow-sm">
+                            <i class="bi-circle-fill my-auto p-0 m-0 me-2 fw-bold text-danger" (click)="getCategorias(false)"></i>
+                            <h5 class="fw-normal my-auto text-truncate text-custom-dark">
+                                {{ data.enabled }}inativos
+                            </h5>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -57,7 +68,7 @@
             </div>
 
             <!-- Tabela -->
-            <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let categoria of categoriasFiltradas">
+            <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let categoria of categorias">
                 <div class="col-10">
                     <p>{{ categoria?.nome }}</p>
                 </div>
